--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -9,12 +9,17 @@
 <body>
     <h1>Index of {{ current_directory }}</h1>
 
+    <a href="{{ request_parent }}">
+    <img src="{{ gallery_root }}/static/icons/folder_32.png" />
+    Back</a><br />
+    
     {% for item, type in dir_contents %}
-        <a href="?dest={{ item }}">
         {% if type == 'd' %}
-            <img src="static/icons/folder_32.png" />
+            <a href="{{ request_root }}/{{ item }}">
+            <img src="{{ gallery_root }}/static/icons/folder_32.png" />
         {% else %}
-            <img src="../Photos_static/{{ item }}" height=100 width=178 />
+            <a href="{{ gallery_root }}_static/{{ subfolder }}{{ item }}">
+            <img src="{{ gallery_root }}_static/{{ subfolder }}{{ item }}" height=100 width=178 />
         {% endif %}
         {{ item }}</a>
         <br />
