added thumbnails. They look terribly blurry

--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -18,8 +18,9 @@
             <a href="{{ request_root }}/{{ item }}">
             <img src="{{ gallery_root }}/static/icons/folder_32.png" />
         {% else %}
-            <a href="{{ gallery_root }}_static/{{ subfolder }}{{ item }}">
-            <img src="{{ gallery_root }}_static/{{ subfolder }}{{ item }}" height=100 width=178 />
+            <a href="{{ gallery_root }}._static/{{ subfolder }}{{ item }}">
+            <img src="{{ gallery_root }}._static/._thumbnails/{{ subfolder }}{{ item }}"
+                 height=100 width=178 />
         {% endif %}
         {{ item }}</a>
         <br />
