Explicit image type in template; improved comment documentation

--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -26,10 +26,12 @@
                     <a href="{{ request_root }}/{{ item }}">
                     <img src="{{ gallery_root }}/static/icons/folder_64.png" /><br />
                     {{ item }}
-                {% else %}
+                {% elif type == 'i' %}
                     <a href="{{ gallery_root }}._static/{{ subfolder }}{{ item }}" target="_blank">
                     <img src="{{ gallery_root }}._static/._thumbnails/{{ subfolder }}{{ item }}"
                          height=100 width=178 />
+                {% elif type == 'f' %}
+                    
                 {% endif %}
                 <!--{{ item }}-->
                 </a>
