Maintain image aspect ratio in thumbnail

--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -28,8 +28,7 @@
                 {{ item }}
             {% elif type == 'i' %}
                 <a href="{{ gallery_root }}._static/{{ subfolder }}{{ item }}" target="_blank">
-                <img src="{{ gallery_root }}._static/._thumbnails/{{ subfolder }}{{ item }}"
-                     height=100 width=178" />
+                <img src="{{ gallery_root }}._static/._thumbnails/{{ subfolder }}{{ item }}" />
             {% else %}
                 <a href="{{ gallery_root }}._static/{{ subfolder }}{{ item}}" target="_blank">
                 <img src="{{ gallery_root }}/static/icons/{{ type }}.png" /><br />
