--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -6,12 +6,31 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=.5" />
     <link rel="stylesheet" type="text/css" href="{{ gallery_root }}/static/grid_layout.css" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
 <body>
     <h1>Index of {{ request_root }}</h1>
 
-    <table> 
+    <p id="thumb_progress"></p>
+    <script type="text/javascript">
+        function getThumbProgress(){
+            //Currently returns 1 if active; 0 if not
+            var progress = $.ajax({ url: '{{ gallery_root }}/getthumbgenstatus/',
+                        datatype: 'text', async: false}).responseText;
+            if (progress == "0"){  //Done
+                document.getElementById("thumb_progress").innerHTML = "Thumbnails " +
+                "all generated. <a href='.'>Refresh</a> the page " +
+                "to see changes";
+            } else{
+                document.getElementById("thumb_progress").innerHTML = "Thumbnails are currently be generated...";
+                setTimeout(getThumbProgress, 3000);
+            }
+        }
+        getThumbProgress();
+    </script>
+
+    <table>
         {% for item, type in dir_contents %}
             {% if loop.index0 % items_per_row == 0 %}
                 <tr>
