--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -26,11 +26,11 @@
                 }
             } else{
                 document.getElementById("thumb_progress").innerHTML = "Thumbnails are currently be generated...";
-                this.first_run = false;
+                getThumbProgress.first_run = false;
                 setTimeout(getThumbProgress, 3000);
             }
         }
-        this.first_run = true;
+        getThumbProgress.first_run = true;
         getThumbProgress();
     </script>
 
