Add link to github

--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -68,5 +68,5 @@
         {% endfor %}
     </table>
     
-    <address>AutoGalleryIndex/{{ autogalleryindex_version }}</address>
+    <address><a href="https://github.com/ion201/AutoGalleryIndex">AutoGalleryIndex</a>/{{ autogalleryindex_version }}</address>
 </body>
